added impressions logic
