# docs/swagger.json
@@ -656,7 +656,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Search text (matches name, cities, start/end dates, budget, spent, impressions, clicks)",
+                        "description": "Search text (matches name, cities, start/end dates, budget, spent, clicks)",
                         "name": "query",
                         "in": "query",
                         "required": true
@@ -3656,8 +3656,8 @@
                 "id": {
                     "type": "string"
                 },
-                "impressions": {
-                    "type": "integer"
+                "impressions_based": {
+                    "type": "boolean"
                 },
                 "lifetime_impressions": {
                     "type": "integer"
@@ -3752,6 +3752,9 @@
                 "end_date": {
                     "type": "string"
                 },
+                "impressions_based": {
+                    "type": "boolean"
+                },
                 "name": {
                     "type": "string"
                 },
@@ -3807,6 +3810,12 @@
                 },
                 "id": {
                     "type": "string"
+                },
+                "impression_count": {
+                    "type": "integer"
+                },
+                "impressions_served": {
+                    "type": "integer"
                 },
                 "name": {
                     "type": "string"
@@ -3971,7 +3980,24 @@
                 "phone_number": {
                     "type": "string"
                 },
+                "roles": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.LoginRole"
+                    }
+                },
                 "user_name": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.LoginRole": {
+            "type": "object",
+            "properties": {
+                "advertiser_id": {
+                    "type": "string"
+                },
+                "name": {
                     "type": "string"
                 }
             }
@@ -4276,6 +4302,9 @@
                 "end_date": {
                     "type": "string"
                 },
+                "impressions_based": {
+                    "type": "boolean"
+                },
                 "name": {
                     "type": "string"
                 },
@@ -4302,6 +4331,9 @@
                     "items": {
                         "type": "string"
                     }
+                },
+                "impression_count": {
+                    "type": "integer"
                 },
                 "name": {
                     "type": "string",
