# internal/models/creative.go
@@ -17,6 +17,8 @@ type Creative struct {
     URL          string      `json:"url"`
     FilePath     string      `json:"-"`
     Size         int64       `json:"size"`
+    ImpressionCount *int64   `json:"impression_count,omitempty"`
+    ImpressionsServed int64  `json:"impressions_served"`
     CampaignID   string      `json:"campaign_id" validate:"required,uuid4"`
     SelectedDays []string    `json:"selected_days"`
     TimeSlots    []string    `json:"time_slots"`
@@ -35,6 +37,7 @@ type UpdateCreativeRequest struct {
     URL          *string      `json:"url,omitempty"`
     FilePath     *string      `json:"-"`
     Size         *int64       `json:"size,omitempty"`
+    ImpressionCount *int64    `json:"impression_count,omitempty"`
     SelectedDays *[]string    `json:"selected_days,omitempty"`
     TimeSlots    *[]string    `json:"time_slots,omitempty"`
     Devices      *[]string    `json:"devices,omitempty"`
